# ShootFast

./: .gitignore  CMakeLists.txt  Dependencies.cmake
Assets/ShootFast/Shader/: Default.frag  Default.vert
Docs/: ECS_Shortcomings.md
ShootFast/Header/Client/: ClientApplication.hpp
ShootFast/Header/Client/Core/: GameState.hpp  GameStates.hpp  InputManager.hpp  Window.hpp
ShootFast/Header/Client/Entity/: Health.hpp  Player.hpp  PlayerFactory.hpp  PlayerInput.hpp  Team.hpp
ShootFast/Header/Client/Entity/Systems/: CameraFollowSystem.hpp  CameraLookSystem.hpp  CharacterMotorSystem.hpp  PlayerInputSystem.hpp
ShootFast/Header/Client/Network/: ClientNetwork.hpp
ShootFast/Header/Client/Render/: Camera.hpp  ClientRenderContext.hpp  DefaultRenderSystem.hpp  Handles.hpp  Material.hpp  Mesh.hpp  MeshBase.hpp  Registries.hpp  RenderComponents.hpp  RenderMesh.hpp  RenderSystem.hpp  Shader.hpp  Texture2d.hpp  VertexBase.hpp
ShootFast/Header/Client/Render/Meshes/: MeshDefault.hpp
ShootFast/Header/Client/Render/Vertices/: VertexDefault.hpp
ShootFast/Header/Client/Utility/: GLFW.hpp
ShootFast/Header/Independent/Core/: FrameContext.hpp  Scheduler.hpp  Settings.hpp
ShootFast/Header/Independent/ECS/: ComponentPool.hpp  GameObject.hpp  GameObjectAllocator.hpp  Hierarchy.hpp  World.hpp  World.inl
ShootFast/Header/Independent/Math/: Transform.hpp  TransformSystem.hpp
ShootFast/Header/Independent/Network/: CommonNetwork.hpp  Packet.hpp  TransformSyncSystem.hpp
ShootFast/Header/Independent/Utility/: AssetPath.hpp  FileHelper.hpp
ShootFast/Header/Server/: ServerApplication.hpp
ShootFast/Header/Server/Network/: ServerNetwork.hpp
ShootFast/Source/Client/: ClientApplication.cpp
ShootFast/Source/Client/Core/: GameStates.cpp  InputManager.cpp  Window.cpp
ShootFast/Source/Client/Entity/: PlayerFactory.cpp
ShootFast/Source/Client/Entity/Systems/: CameraFollowSystem.cpp  CameraLookSystem.cpp  CharacterMotorSystem.cpp  PlayerInputSystem.cpp
ShootFast/Source/Client/Network/: ClientNetwork.cpp
ShootFast/Source/Client/Render/: DefaultRenderSystem.cpp  Material.cpp  Registries.cpp  RenderSystem.cpp  Shader.cpp  Texture2d.cpp
ShootFast/Source/Client/Render/Meshes/: MeshDefault.cpp
ShootFast/Source/Independent/Core/: Scheduler.cpp
ShootFast/Source/Independent/ECS/: GameObjectAllocator.cpp  Hierarchy.cpp  World.cpp
ShootFast/Source/Independent/Math/: TransformSystem.cpp
ShootFast/Source/Independent/Network/: TransformSyncSystem.cpp
ShootFast/Source/Server/: ServerApplication.cpp
ShootFast/Source/Server/Network/: ServerNetwork.cpp
